// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavTabs does not require history 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-NavTabs)>
        <inject-NavTabs classes={{...}}>
          <NavTabs classes={{...}} tabs={{...}} history={{...}} elevation={2}>
            <WithStyles(Paper) className="RSFNavTabs-root-402" elevation={2}>
              <Paper className="RSFNavTabs-root-402" elevation={2} classes={{...}} component="div" square={false}>
                <div className="MuiPaper-root-405 MuiPaper-elevation2-409 MuiPaper-rounded-406 RSFNavTabs-root-402">
                  <WithStyles(inject-TabsRow-with-app) initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                    <inject-TabsRow-with-app initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                      <TabsRow initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}} app={{...}} variant="scrollable">
                        <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-434 RSFNavTabs-tabs-401" classes={{...}}>
                          <Tabs value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-434 RSFNavTabs-tabs-401" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} scrollable={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                            <div className="MuiTabs-root-440 RSFTabsRow-root-434 RSFNavTabs-tabs-401 RSFTabsRow-root-434 RSFNavTabs-tabs-401" variant="scrollable">
                              <EventListener target="window" onResize={[Function: debounced]} />
                              <div className="MuiTabs-flexContainer-441 RSFTabsRow-centered-439">
                                <div className="MuiTabs-scroller-443 RSFTabsRow-scroller-437 MuiTabs-fixed-444" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                                  <div className="MuiTabs-flexContainer-441 RSFTabsRow-centered-439">
                                    <WithStyles(NavTab) text="Tab 1" url="/1" state="{"page":"product"}" image={{...}} items={{...}} root={false} server={false} prefetch={{...}} expanded={false} classes={{...}} item={{...}} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                                      <NavTab text="Tab 1" url="/1" state="{"page":"product"}" image={{...}} items={{...}} root={false} server={false} prefetch={{...}} expanded={false} item={{...}} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <WithStyles(inject-Link) state={[Function: state]} className="RSFNavTab-link-452" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}}>
                                              <inject-Link state={[Function: state]} className="RSFNavTab-link-452" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                <Link state={[Function: state]} className="RSFNavTab-link-452" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                  <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="topNavClicked" data-moov-link="on" className="RSFLink-root-455 RSFNavTab-link-452" style={[undefined]} onClick={[Function]} href="https://example.com/1">
                                                    <WithStyles(Tab) className="RSFNavTab-root-449 RSFTabsRow-tab-435" label="Tab 1" classes={{...}}>
                                                      <Tab className="RSFNavTab-root-449 RSFTabsRow-tab-435" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                        <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-456 MuiTab-textColorInherit-458 RSFNavTab-root-449 RSFTabsRow-tab-435" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                          <ButtonBase focusRipple={true} className="MuiTab-root-456 MuiTab-textColorInherit-458 RSFNavTab-root-449 RSFTabsRow-tab-435" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                            <button className="MuiButtonBase-root-468 MuiTab-root-456 MuiTab-textColorInherit-458 RSFNavTab-root-449 RSFTabsRow-tab-435" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                              <span className="MuiTab-wrapper-464">
                                                                <span className="MuiTab-labelContainer-465">
                                                                  <span className="MuiTab-label-466 RSFNavTab-label-451">
                                                                    Tab 1
                                                                  </span>
                                                                </span>
                                                              </span>
                                                              <NoSsr defer={false} fallback={{...}}>
                                                                <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                  <TouchRipple center={false} classes={{...}}>
                                                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-471" childFactory={[Function: childFactory]}>
                                                                      <span className="MuiTouchRipple-root-471" />
                                                                    </TransitionGroup>
                                                                  </TouchRipple>
                                                                </WithStyles(TouchRipple)>
                                                              </NoSsr>
                                                            </button>
                                                          </ButtonBase>
                                                        </WithStyles(ButtonBase)>
                                                      </Tab>
                                                    </WithStyles(Tab)>
                                                  </a>
                                                </Link>
                                              </inject-Link>
                                            </WithStyles(inject-Link)>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                    <WithStyles(NavTab) text="Tab 1" url="/2" state="{"page":"product"}" image={{...}} items={{...}} root={false} server={false} prefetch={{...}} expanded={false} classes={{...}} item={{...}} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                                      <NavTab text="Tab 1" url="/2" state="{"page":"product"}" image={{...}} items={{...}} root={false} server={false} prefetch={{...}} expanded={false} item={{...}} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <WithStyles(inject-Link) state={[Function: state]} className="RSFNavTab-link-452" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}}>
                                              <inject-Link state={[Function: state]} className="RSFNavTab-link-452" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                <Link state={[Function: state]} className="RSFNavTab-link-452" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                  <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="topNavClicked" data-moov-link="on" className="RSFLink-root-455 RSFNavTab-link-452" style={[undefined]} onClick={[Function]} href="https://example.com/2">
                                                    <WithStyles(Tab) className="RSFNavTab-root-449 RSFTabsRow-tab-435" label="Tab 1" classes={{...}}>
                                                      <Tab className="RSFNavTab-root-449 RSFTabsRow-tab-435" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                        <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-456 MuiTab-textColorInherit-458 RSFNavTab-root-449 RSFTabsRow-tab-435" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                          <ButtonBase focusRipple={true} className="MuiTab-root-456 MuiTab-textColorInherit-458 RSFNavTab-root-449 RSFTabsRow-tab-435" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                            <button className="MuiButtonBase-root-468 MuiTab-root-456 MuiTab-textColorInherit-458 RSFNavTab-root-449 RSFTabsRow-tab-435" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                              <span className="MuiTab-wrapper-464">
                                                                <span className="MuiTab-labelContainer-465">
                                                                  <span className="MuiTab-label-466 RSFNavTab-label-451">
                                                                    Tab 1
                                                                  </span>
                                                                </span>
                                                              </span>
                                                              <NoSsr defer={false} fallback={{...}}>
                                                                <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                  <TouchRipple center={false} classes={{...}}>
                                                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-471" childFactory={[Function: childFactory]}>
                                                                      <span className="MuiTouchRipple-root-471" />
                                                                    </TransitionGroup>
                                                                  </TouchRipple>
                                                                </WithStyles(TouchRipple)>
                                                              </NoSsr>
                                                            </button>
                                                          </ButtonBase>
                                                        </WithStyles(ButtonBase)>
                                                      </Tab>
                                                    </WithStyles(Tab)>
                                                  </a>
                                                </Link>
                                              </inject-Link>
                                            </WithStyles(inject-Link)>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                  </div>
                                  <WithStyles(TabIndicator) className="MuiTabs-indicator-448 RSFTabsRow-indicator-432 RSFTabsRow-noSelection-433" color="secondary" style={{...}}>
                                    <TabIndicator className="MuiTabs-indicator-448 RSFTabsRow-indicator-432 RSFTabsRow-noSelection-433" color="secondary" style={{...}} classes={{...}}>
                                      <span className="MuiPrivateTabIndicator-root-478 MuiPrivateTabIndicator-colorSecondary-480 MuiTabs-indicator-448 RSFTabsRow-indicator-432 RSFTabsRow-noSelection-433" style={{...}} />
                                    </TabIndicator>
                                  </WithStyles(TabIndicator)>
                                </div>
                              </div>
                            </div>
                          </Tabs>
                        </WithStyles(Tabs)>
                      </TabsRow>
                    </inject-TabsRow-with-app>
                  </WithStyles(inject-TabsRow-with-app)>
                </div>
              </Paper>
            </WithStyles(Paper)>
          </NavTabs>
        </inject-NavTabs>
      </WithStyles(inject-NavTabs)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`NavTabs renders 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-NavTabs)>
        <inject-NavTabs classes={{...}}>
          <NavTabs classes={{...}} tabs={{...}} history={{...}} elevation={2}>
            <WithStyles(Paper) className="RSFNavTabs-root-2" elevation={2}>
              <Paper className="RSFNavTabs-root-2" elevation={2} classes={{...}} component="div" square={false}>
                <div className="MuiPaper-root-5 MuiPaper-elevation2-9 MuiPaper-rounded-6 RSFNavTabs-root-2">
                  <WithStyles(inject-TabsRow-with-app) initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                    <inject-TabsRow-with-app initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                      <TabsRow initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}} app={{...}} variant="scrollable">
                        <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-34 RSFNavTabs-tabs-1" classes={{...}}>
                          <Tabs value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-34 RSFNavTabs-tabs-1" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} scrollable={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                            <div className="MuiTabs-root-40 RSFTabsRow-root-34 RSFNavTabs-tabs-1 RSFTabsRow-root-34 RSFNavTabs-tabs-1" variant="scrollable">
                              <EventListener target="window" onResize={[Function: debounced]} />
                              <div className="MuiTabs-flexContainer-41 RSFTabsRow-centered-39">
                                <div className="MuiTabs-scroller-43 RSFTabsRow-scroller-37 MuiTabs-fixed-44" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                                  <div className="MuiTabs-flexContainer-41 RSFTabsRow-centered-39">
                                    <WithStyles(NavTab) text="Tab 1" url="/1" state="{"page":"product"}" image={{...}} items={{...}} root={false} server={false} prefetch={{...}} expanded={false} classes={{...}} item={{...}} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                                      <NavTab text="Tab 1" url="/1" state="{"page":"product"}" image={{...}} items={{...}} root={false} server={false} prefetch={{...}} expanded={false} item={{...}} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <WithStyles(inject-Link) state={[Function: state]} className="RSFNavTab-link-52" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}}>
                                              <inject-Link state={[Function: state]} className="RSFNavTab-link-52" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                <Link state={[Function: state]} className="RSFNavTab-link-52" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                  <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="topNavClicked" data-moov-link="on" className="RSFLink-root-55 RSFNavTab-link-52" style={[undefined]} onClick={[Function]} href="https://example.com/1">
                                                    <WithStyles(Tab) className="RSFNavTab-root-49 RSFTabsRow-tab-35" label="Tab 1" classes={{...}}>
                                                      <Tab className="RSFNavTab-root-49 RSFTabsRow-tab-35" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                        <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-56 MuiTab-textColorInherit-58 RSFNavTab-root-49 RSFTabsRow-tab-35" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                          <ButtonBase focusRipple={true} className="MuiTab-root-56 MuiTab-textColorInherit-58 RSFNavTab-root-49 RSFTabsRow-tab-35" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                            <button className="MuiButtonBase-root-68 MuiTab-root-56 MuiTab-textColorInherit-58 RSFNavTab-root-49 RSFTabsRow-tab-35" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                              <span className="MuiTab-wrapper-64">
                                                                <span className="MuiTab-labelContainer-65">
                                                                  <span className="MuiTab-label-66 RSFNavTab-label-51">
                                                                    Tab 1
                                                                  </span>
                                                                </span>
                                                              </span>
                                                              <NoSsr defer={false} fallback={{...}}>
                                                                <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                  <TouchRipple center={false} classes={{...}}>
                                                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-71" childFactory={[Function: childFactory]}>
                                                                      <span className="MuiTouchRipple-root-71" />
                                                                    </TransitionGroup>
                                                                  </TouchRipple>
                                                                </WithStyles(TouchRipple)>
                                                              </NoSsr>
                                                            </button>
                                                          </ButtonBase>
                                                        </WithStyles(ButtonBase)>
                                                      </Tab>
                                                    </WithStyles(Tab)>
                                                  </a>
                                                </Link>
                                              </inject-Link>
                                            </WithStyles(inject-Link)>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                    <WithStyles(NavTab) text="Tab 1" url="/2" state="{"page":"product"}" image={{...}} items={{...}} root={false} server={false} prefetch={{...}} expanded={false} classes={{...}} item={{...}} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                                      <NavTab text="Tab 1" url="/2" state="{"page":"product"}" image={{...}} items={{...}} root={false} server={false} prefetch={{...}} expanded={false} item={{...}} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <WithStyles(inject-Link) state={[Function: state]} className="RSFNavTab-link-52" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}}>
                                              <inject-Link state={[Function: state]} className="RSFNavTab-link-52" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                <Link state={[Function: state]} className="RSFNavTab-link-52" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                  <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="topNavClicked" data-moov-link="on" className="RSFLink-root-55 RSFNavTab-link-52" style={[undefined]} onClick={[Function]} href="https://example.com/2">
                                                    <WithStyles(Tab) className="RSFNavTab-root-49 RSFTabsRow-tab-35" label="Tab 1" classes={{...}}>
                                                      <Tab className="RSFNavTab-root-49 RSFTabsRow-tab-35" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                        <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-56 MuiTab-textColorInherit-58 RSFNavTab-root-49 RSFTabsRow-tab-35" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                          <ButtonBase focusRipple={true} className="MuiTab-root-56 MuiTab-textColorInherit-58 RSFNavTab-root-49 RSFTabsRow-tab-35" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                            <button className="MuiButtonBase-root-68 MuiTab-root-56 MuiTab-textColorInherit-58 RSFNavTab-root-49 RSFTabsRow-tab-35" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                              <span className="MuiTab-wrapper-64">
                                                                <span className="MuiTab-labelContainer-65">
                                                                  <span className="MuiTab-label-66 RSFNavTab-label-51">
                                                                    Tab 1
                                                                  </span>
                                                                </span>
                                                              </span>
                                                              <NoSsr defer={false} fallback={{...}}>
                                                                <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                  <TouchRipple center={false} classes={{...}}>
                                                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-71" childFactory={[Function: childFactory]}>
                                                                      <span className="MuiTouchRipple-root-71" />
                                                                    </TransitionGroup>
                                                                  </TouchRipple>
                                                                </WithStyles(TouchRipple)>
                                                              </NoSsr>
                                                            </button>
                                                          </ButtonBase>
                                                        </WithStyles(ButtonBase)>
                                                      </Tab>
                                                    </WithStyles(Tab)>
                                                  </a>
                                                </Link>
                                              </inject-Link>
                                            </WithStyles(inject-Link)>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                  </div>
                                  <WithStyles(TabIndicator) className="MuiTabs-indicator-48 RSFTabsRow-indicator-32 RSFTabsRow-noSelection-33" color="secondary" style={{...}}>
                                    <TabIndicator className="MuiTabs-indicator-48 RSFTabsRow-indicator-32 RSFTabsRow-noSelection-33" color="secondary" style={{...}} classes={{...}}>
                                      <span className="MuiPrivateTabIndicator-root-78 MuiPrivateTabIndicator-colorSecondary-80 MuiTabs-indicator-48 RSFTabsRow-indicator-32 RSFTabsRow-noSelection-33" style={{...}} />
                                    </TabIndicator>
                                  </WithStyles(TabIndicator)>
                                </div>
                              </div>
                            </div>
                          </Tabs>
                        </WithStyles(Tabs)>
                      </TabsRow>
                    </inject-TabsRow-with-app>
                  </WithStyles(inject-TabsRow-with-app)>
                </div>
              </Paper>
            </WithStyles(Paper)>
          </NavTabs>
        </inject-NavTabs>
      </WithStyles(inject-NavTabs)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`NavTabs uses prefetch 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-NavTabs)>
        <inject-NavTabs classes={{...}}>
          <NavTabs classes={{...}} tabs={{...}} history={{...}} elevation={2}>
            <WithStyles(Paper) className="RSFNavTabs-root-82" elevation={2}>
              <Paper className="RSFNavTabs-root-82" elevation={2} classes={{...}} component="div" square={false}>
                <div className="MuiPaper-root-85 MuiPaper-elevation2-89 MuiPaper-rounded-86 RSFNavTabs-root-82">
                  <WithStyles(inject-TabsRow-with-app) initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                    <inject-TabsRow-with-app initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                      <TabsRow initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}} app={{...}} variant="scrollable">
                        <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-114 RSFNavTabs-tabs-81" classes={{...}}>
                          <Tabs value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-114 RSFNavTabs-tabs-81" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} scrollable={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                            <div className="MuiTabs-root-120 RSFTabsRow-root-114 RSFNavTabs-tabs-81 RSFTabsRow-root-114 RSFNavTabs-tabs-81" variant="scrollable">
                              <EventListener target="window" onResize={[Function: debounced]} />
                              <div className="MuiTabs-flexContainer-121 RSFTabsRow-centered-119">
                                <div className="MuiTabs-scroller-123 RSFTabsRow-scroller-117 MuiTabs-fixed-124" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                                  <div className="MuiTabs-flexContainer-121 RSFTabsRow-centered-119">
                                    <WithStyles(NavTab) text="Tab 1" url="/1" state="{"page":"product"}" image={{...}} items={{...}} root={false} server={false} prefetch="always" expanded={false} classes={{...}} item={{...}} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                                      <NavTab text="Tab 1" url="/1" state="{"page":"product"}" image={{...}} items={{...}} root={false} server={false} prefetch="always" expanded={false} item={{...}} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <WithStyles(inject-Link) state={[Function: state]} className="RSFNavTab-link-132" to="/1" prefetch="always" onClick={[Function]} anchorProps={{...}}>
                                              <inject-Link state={[Function: state]} className="RSFNavTab-link-132" to="/1" prefetch="always" onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                <Link state={[Function: state]} className="RSFNavTab-link-132" to="/1" prefetch="always" onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                  <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="topNavClicked" data-moov-link="on" className="RSFLink-root-135 RSFNavTab-link-132" style={[undefined]} onClick={[Function]} href="https://example.com/1" data-moov-rel="prefetch">
                                                    <WithStyles(Tab) className="RSFNavTab-root-129 RSFTabsRow-tab-115" label="Tab 1" classes={{...}}>
                                                      <Tab className="RSFNavTab-root-129 RSFTabsRow-tab-115" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                        <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-136 MuiTab-textColorInherit-138 RSFNavTab-root-129 RSFTabsRow-tab-115" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                          <ButtonBase focusRipple={true} className="MuiTab-root-136 MuiTab-textColorInherit-138 RSFNavTab-root-129 RSFTabsRow-tab-115" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                            <button className="MuiButtonBase-root-148 MuiTab-root-136 MuiTab-textColorInherit-138 RSFNavTab-root-129 RSFTabsRow-tab-115" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                              <span className="MuiTab-wrapper-144">
                                                                <span className="MuiTab-labelContainer-145">
                                                                  <span className="MuiTab-label-146 RSFNavTab-label-131">
                                                                    Tab 1
                                                                  </span>
                                                                </span>
                                                              </span>
                                                              <NoSsr defer={false} fallback={{...}}>
                                                                <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                  <TouchRipple center={false} classes={{...}}>
                                                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-151" childFactory={[Function: childFactory]}>
                                                                      <span className="MuiTouchRipple-root-151" />
                                                                    </TransitionGroup>
                                                                  </TouchRipple>
                                                                </WithStyles(TouchRipple)>
                                                              </NoSsr>
                                                            </button>
                                                          </ButtonBase>
                                                        </WithStyles(ButtonBase)>
                                                      </Tab>
                                                    </WithStyles(Tab)>
                                                  </a>
                                                </Link>
                                              </inject-Link>
                                            </WithStyles(inject-Link)>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                    <WithStyles(NavTab) text="Tab 1" url="/2" state="{"page":"product"}" image={{...}} items={{...}} root={false} server={false} prefetch="visible" expanded={false} classes={{...}} item={{...}} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                                      <NavTab text="Tab 1" url="/2" state="{"page":"product"}" image={{...}} items={{...}} root={false} server={false} prefetch="visible" expanded={false} item={{...}} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <WithStyles(inject-Link) state={[Function: state]} className="RSFNavTab-link-132" to="/2" prefetch="visible" onClick={[Function]} anchorProps={{...}}>
                                              <inject-Link state={[Function: state]} className="RSFNavTab-link-132" to="/2" prefetch="visible" onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                <Link state={[Function: state]} className="RSFNavTab-link-132" to="/2" prefetch="visible" onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                  <VisibilitySensor onChange={[Function]} partialVisibility={true} active={true} minTopValue={0} scrollCheck={false} scrollDelay={250} scrollThrottle={-1} resizeCheck={false} resizeDelay={250} resizeThrottle={-1} intervalCheck={true} intervalDelay={100} delayedCall={false} offset={{...}} containment={{...}}>
                                                    <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="topNavClicked" data-moov-link="on" className="RSFLink-root-135 RSFNavTab-link-132" style={[undefined]} onClick={[Function]} href="https://example.com/2" data-moov-rel="prefetch">
                                                      <WithStyles(Tab) className="RSFNavTab-root-129 RSFTabsRow-tab-115" label="Tab 1" classes={{...}}>
                                                        <Tab className="RSFNavTab-root-129 RSFTabsRow-tab-115" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-136 MuiTab-textColorInherit-138 RSFNavTab-root-129 RSFTabsRow-tab-115" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                            <ButtonBase focusRipple={true} className="MuiTab-root-136 MuiTab-textColorInherit-138 RSFNavTab-root-129 RSFTabsRow-tab-115" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                              <button className="MuiButtonBase-root-148 MuiTab-root-136 MuiTab-textColorInherit-138 RSFNavTab-root-129 RSFTabsRow-tab-115" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                                <span className="MuiTab-wrapper-144">
                                                                  <span className="MuiTab-labelContainer-145">
                                                                    <span className="MuiTab-label-146 RSFNavTab-label-131">
                                                                      Tab 1
                                                                    </span>
                                                                  </span>
                                                                </span>
                                                                <NoSsr defer={false} fallback={{...}}>
                                                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                    <TouchRipple center={false} classes={{...}}>
                                                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-151" childFactory={[Function: childFactory]}>
                                                                        <span className="MuiTouchRipple-root-151" />
                                                                      </TransitionGroup>
                                                                    </TouchRipple>
                                                                  </WithStyles(TouchRipple)>
                                                                </NoSsr>
                                                              </button>
                                                            </ButtonBase>
                                                          </WithStyles(ButtonBase)>
                                                        </Tab>
                                                      </WithStyles(Tab)>
                                                    </a>
                                                  </VisibilitySensor>
                                                </Link>
                                              </inject-Link>
                                            </WithStyles(inject-Link)>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                  </div>
                                  <WithStyles(TabIndicator) className="MuiTabs-indicator-128 RSFTabsRow-indicator-112 RSFTabsRow-noSelection-113" color="secondary" style={{...}}>
                                    <TabIndicator className="MuiTabs-indicator-128 RSFTabsRow-indicator-112 RSFTabsRow-noSelection-113" color="secondary" style={{...}} classes={{...}}>
                                      <span className="MuiPrivateTabIndicator-root-158 MuiPrivateTabIndicator-colorSecondary-160 MuiTabs-indicator-128 RSFTabsRow-indicator-112 RSFTabsRow-noSelection-113" style={{...}} />
                                    </TabIndicator>
                                  </WithStyles(TabIndicator)>
                                </div>
                              </div>
                            </div>
                          </Tabs>
                        </WithStyles(Tabs)>
                      </TabsRow>
                    </inject-TabsRow-with-app>
                  </WithStyles(inject-TabsRow-with-app)>
                </div>
              </Paper>
            </WithStyles(Paper)>
          </NavTabs>
        </inject-NavTabs>
      </WithStyles(inject-NavTabs)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;
